# jimbo

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: README.md  project-automation.yml
src/: lib.rs  main.rs
src/cli/: config.rs  mod.rs  simulate.rs  solve.rs
src/config/: deck.rs  game_state.rs  mod.rs
src/core/: card.rs  hand.rs  joker.rs  mod.rs  scoring.rs  simulator.rs  solver.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/tui/widgets/: mod.rs
