[package]
name = "jimbo"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Your personal Balatro strategist"
license = "MIT OR Apache-2.0"

[[bin]]
name = "jimbo"
path = "src/main.rs"

[lib]
name = "jimbo"
path = "src/lib.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation (for future use with seeds)
rand = "0.8"
rand_chacha = "0.3"
